[tool.poetry]
name = "damnsshmanager"
version = "0.1.0"
description = "Simple cli management tool to save ssh connection settings"
authors = ["Nils Verheyen <nils@ungerichtet.de>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
