[tool.poetry]
name = "damnsshmanager"
version = "0.2.3"
description = "The simplest ssh cli agent one is able to find"
authors = ["Nils Verheyen <nils@ungerichtet.de>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
