[tool.poetry]
name = "damnsshmanager"
version = "0.2.3"
description = "The simplest ssh cli agent one is able to find"
authors = ["Nils Verheyen <nils@ungerichtet.de>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
appdirs = "^1.4.4"
paramiko = "^2.8.0"
sshtunnel = "^0.4.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"
